# weather_forecaster

./: .gitignore  Cargo.toml  config.yml
src/: config.rs  forecaster.rs  lib.rs  main.rs  plot.rs
