[package]
name = "weather_forecaster"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
cli-clipboard = "0.4.0"
indexmap = "2.12.0"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
strum = { version = "0.27.2", features = ["derive"] }
float-cmp = { version = "0.10.0", features = ["std"] }
